<?xml version="1.0"?>
<package format="2">
  <name>data_loaders</name>
  <version>0.0.0</version>
  <description>Data loaders for various datatsets</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alejandro.rosu@gmail.com">Radu Alexandru Rosu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>

  <!-- <depend>bsplines</depend> -->
  <!-- <depend>sm_kinematics</depend> -->
  <!-- <depend>sparse_block_matrix</depend> -->


  <!-- <depend>velodyne_pointcloud</depend> -->

  <!-- <depend>custom_msgs</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
